Added login and browsing for brokers and funds.

--- a/iTrade/WebContent/index.css
+++ b/iTrade/WebContent/index.css
@@ -45,6 +45,10 @@ input{
 	display: flex;
 		flex-grow:10;
 }
+#bselecter{
+	width: 100px;
+	display: inline-block;
+}
 .binput{
 	display: flex;
 		flex-grow:10;
