--- a/iTrade/WebContent/index.css
+++ b/iTrade/WebContent/index.css
@@ -145,20 +145,32 @@ input {
 	margin-left: auto;
 	margin-bottom: 50px;
 	margin-right: auto;
-	margin-top: 50px;
+	margin-top: 10px;
 	padding-left: 30px;
 	padding-right: 30px;
 	padding-top: 16px;
 	padding-bottom: 10px;
 }
 
+.tabs {
+	width: 24.718%;
+	text-align: center;
+	display: inline-block;
+	background: white;
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	height: 35px;
+}
+
 #brokers {
 	width: 90%;
-	position: absolute;
+	height: 90%; position : absolute;
 	top: 50%;
 	transform: translateY(-50%);
-	background: green;
+	background: white;
 	margin: auto;
 	margin-left: 5%;
 	border-radius: 30px;
+	position: absolute;
+	margin-top: 15px;
 }
