--- a/iTrade/WebContent/index.css
+++ b/iTrade/WebContent/index.css
@@ -22,7 +22,7 @@ select {
 }
 
 input {
-	width: 100%;
+	width: 80px;
 	text-align: center;
 }
 
@@ -38,67 +38,100 @@ input {
 .blistt {
 	display: flex;
 }
-
+/*row container*/
 .blist {
 	display: flex;
+}
+
+/*Broker and common rows*/
+.bno {
+	display: flex;
+	flex-grow: 5;
+	width: 1px;
 	border-bottom: solid 1px rgba(111, 111, 111, 0.2);
 }
 
-.bno {
+.bname {
 	display: flex;
-	flex-grow: 10;
+	flex-grow: 12;
+	width: 1px;
+	border-bottom: solid 1px rgba(111, 111, 111, 0.2);
+}
+
+.blimit {
+	display: flex;
+	flex-grow: 6;
+	width: 1px;
+	border-bottom: solid 1px rgba(111, 111, 111, 0.2);
+}
+
+.btime {
+	display: flex;
+	flex-grow: 8;
+	width: 1px;
+	border-bottom: solid 1px rgba(111, 111, 111, 0.2);
+}
+
+.bgap {
+	display: flex;
+	flex-grow: 4;
 	width: 1px;
 }
 
 .action {
 	display: flex;
-	flex-grow: 10;
-}
-
-.bname {
-	display: flex;
-	flex-grow: 20;
 	width: 1px;
+	flex-grow: 16;
+	border-bottom: solid 1px rgba(111, 111, 111, 0.2);
 }
-
-.blimit {
-	display: flex;
-	flex-grow: 10;
-	width: 1px;
-}
-
+/*Row Headers*/
 .bnot {
 	display: flex;
-	flex-grow: 10;
+	flex-grow: 5;
 	width: 1px;
-	font-size: 20px;
+	font-size: 14pt;
 	text-align: center;
 }
 
 .bnamet {
 	display: flex;
-	flex-grow: 20;
+	flex-grow: 12;
 	width: 1px;
-	font-size: 20px;
+	font-size: 14pt;
 	text-align: center;
 }
 
 .blimitt {
 	display: flex;
-	flex-grow: 10;
+	flex-grow: 6;
 	width: 1px;
-	font-size: 20px;
+	font-size: 14pt;
 	text-align: center;
 }
 
-.btime {
+.btimet {
 	display: flex;
-	flex-grow: 10;
+	flex-grow: 8;
 	width: 1px;
+	font-size: 14pt;
+	text-align: center;
+}
+
+.bactiont {
+	display: flex;
+	flex-grow: 16;
+	width: 1px;
+	font-size: 14pt;
+	text-align: center;
 }
 
 #bselecter {
 	width: 100px;
+	display: inline-block;
+}
+
+.biginput {
+	width: 200px;
 	display: inline-block;
 }
 
@@ -124,11 +157,12 @@ input {
 
 .binput {
 	display: flex;
-	flex-grow: 10;
-	max-width: 80px;
+	flex-grow: 4;
+	width: 1px;
+	/*max-width: 80px;
 	min-width: 60px;
 	margin-left: auto;
-	margin-right: auto
+	margin-right: auto*/
 }
 
 .fundsheader {
@@ -140,8 +174,7 @@ input {
 
 .innerbubble {
 	background-color: white;
-	border-radius: 18px;
-	width: 85%;
+	border-radius: 30px;
 	margin-left: auto;
 	margin-bottom: 50px;
 	margin-right: auto;
@@ -150,27 +183,51 @@ input {
 	padding-right: 30px;
 	padding-top: 16px;
 	padding-bottom: 10px;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	width: 90%;
+	-webkit-transform: translate(-50%, 0%);
+	transform: translate(-50%, 0%);
 }
 
 .tabs {
-	width: 24.718%;
 	text-align: center;
-	display: inline-block;
+	display: flex;
+	flex-grow: 25;
 	background: white;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 	height: 35px;
+	justify-content: center;
+	font-size: 18pt;
 }
 
 #brokers {
-	width: 90%;
-	height: 90%; position : absolute;
+	width: 95%;
+	height: 90%;
+	position: relative;
 	top: 50%;
 	transform: translateY(-50%);
 	background: white;
 	margin: auto;
-	margin-left: 5%;
+	margin-left: 2.5%;
 	border-radius: 30px;
 	position: absolute;
 	margin-top: 15px;
+}
+
+#brokername {
+	text-align: center;
+	font-size: 24pt;
+}
+#curbal {
+	text-align: center;
+	font-size: 16pt;
+}
+
+.hidden{
+	visibility: hidden;
 }
