--- a/iTrade/WebContent/index.css
+++ b/iTrade/WebContent/index.css
@@ -205,6 +205,7 @@ input {
 	height: 35px;
 	justify-content: center;
 	font-size: 18pt;
+	cursor: pointer;
 }
 
 #brokers {
@@ -226,7 +227,7 @@ input {
 	font-size: 24pt;
 }
 
-#curbal {
+.title {
 	text-align: center;
 	font-size: 16pt;
 }
